--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -20,4 +20,11 @@
 
   </div>
 
+  <script type="text/javascript">
+    flatpickr('.flatpickr', {
+      minDate: new Date(),
+      dateFormat: 'd/m/Y'
+    })
+  </script>
+
 {% endblock %}
