--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -12,18 +12,32 @@
 
     </div>
 
-    <form action="/app/appointments/news/{{ provider.id }}" method="post">
+    <form action="/app/appointments/new/{{ provider.id }}" method="post">
       <input type="text" class="flatpickr" placeholder="Escolha uma data">
 
+    <div id="hours">
+
+    </div>
+
+    <button type="submit">Agendar</button>
 
     </form>
+
+
 
   </div>
 
   <script type="text/javascript">
     flatpickr('.flatpickr', {
       minDate: new Date(),
-      dateFormat: 'd/m/Y'
+      dateFormat: 'd/m/Y',
+      onChange: function (date) {
+        fetch(`/app/available/{{ provider.id }}?date=${date[0].getTime()} `).then(function(response) {
+          response.text().then(function (html){
+            document.getElementById('hours').innerHTML = html
+          })
+        })
+      }
     })
   </script>
 
